# Rust

migrations/2021-08-17-191141_create_posts/: down.sql
social_network/: Cargo.toml  script.txt
social_network/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
social_network/migrations/00000000000000_diesel_initial_setup/src/: schema.rs
social_network/migrations/2021-08-17-191141_create_posts/: down.sql  up.sql
social_network/migrations/2021-08-17-191141_create_posts/src/: schema.rs
social_network/src/: auth.rs  main.rs  models.rs  schema.rs
