[package]
name = "social_network"
version = "0.1.0"
edition = "2018"

[dependencies]
actix_web_dev = {git = "https://github.com/Engine-studio/actix-web-dev-tools"}
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures-util = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.10", features = ["json"] }
chrono = { version = "0.4.10", features = ["serde"] }
actix-service = "1.0.6"
futures = "0.3.1"
diesel_migrations = "1.4.0"
rand = "0.8.3"
actix-http = "2.2.0"
r2d2 = "0.8.9"
ring = "0.16.20"
data-encoding = "2.3.2"
jsonwebtoken = "=7.2"
alcoholic_jwt = "1.0.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
warp = "0.2"
thiserror = "1.0"
derive-error = "0.0.4"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
derive_more = "0.99.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
bcrypt = "0.8.2"
